<resources>
    <string name="app_name">Pokecoin</string>
    <string name="about_title">Pokecoin - Your financial tracker</string>


    <!--Navigation-->
    <string name="tab_main">Main</string>
    <string name="tab_feed">Feed</string>
    <string name="tab_transparent"> </string>
    <string name="tab_report">Reports</string>
    <string name="tab_settings">Settings</string>
    <!--Navigation-->

    <!--General-->
    <string name="connection_error">There is no connection to the Internet!</string>
    <string name="loading_error">An error occurred while loading</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <!--General-->

    <string name="total_balance">Total balance</string>

    <string name="empty_operations">At the moment there are no operations!</string>

    <string name="current_balance">Current wallet:</string>

    <string name="default_wallet">Base currency</string>

    <string name="about_version">App version: %1$s</string>

    <string name="balance_title">Wallet</string>
    <string name="settings_title">Settings</string>
    <string name="email_title">Feedback</string>

    <string name="balance">Balance</string>

    <string name="about_app">About app</string>
    <string name="feedback">Report a problem</string>
    <string name="email_sending">Send email</string>
    <string name="mail_apps_not_available">No apps available to send email</string>

    <string name="copytight_this_year">Copyright 2018 © sergon146</string>
    <string name="copytight">Copyright 2018–%1$d © sergon146</string>

    <string name="rubel_short">RUB</string>

    <string name="add_transaction_title">Add transaction</string>
    <string name="report_title">Report</string>

    <!--Wallet type-->
    <string name="wallet_cash">Cash</string>
    <string name="wallet_debit_card">Debit card</string>
    <string name="wallet_credit_card">Credit card</string>
    <!--Wallet type-->

    <!--Operation type-->
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <!--Operation type-->

    <!--Transaction category-->
    <string name="products">Products</string>
    <string name="communal">Communal</string>
    <string name="transport">Transport</string>
    <string name="eating">Eating</string>
    <string name="clothing">Clothing</string>
    <string name="other">Other</string>
    <!--Transaction category-->

    <!--Add transaction screen-->
    <string name="amount_title">Amount</string>
    <string name="operation_title">Operation type</string>
    <string name="currency_title">Currency</string>
    <string name="category_title">Category type</string>
    <string name="wallet_title">Wallet</string>
    <string name="empty_amount_toast">Amount cannot be zero!</string>
    <!--Add transaction screen-->

    <!--Utils-->
    <string name="currency_value">%1$s %2$s</string>
    <string name="amount">%1$s %2$s</string>
    <string name="details">%1$s (%2$s)</string>
    <!--Utils-->
</resources>
