<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_gradient_bg"
        >

        <TextView
            android:id="@+id/currency_title2"
            style="@style/TextStyleLight.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/amount_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.wajahatkarim3.easymoneywidgets.EasyMoneyEditText
            android:id="@+id/money_edit"
            style="@style/WhiteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start"
            android:inputType="numberDecimal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="000"
            android:textSize="30sp"
            app:currency_symbol="$"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_title2"
            app:show_commas="true"
            app:show_currency="true"
            />


        <TextView
            android:id="@+id/type_title"
            style="@style/TextStyleLight.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/operation_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/money_edit"
            />

        <RadioGroup
            android:id="@+id/type_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_title"
            >

            <RadioButton
                android:id="@+id/radio_expanse"
                style="@style/RadioExpanse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/expense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/radio_income"
                app:layout_constraintTop_toBottomOf="@+id/type_title"
                />

            <RadioButton
                android:id="@+id/radio_income"
                style="@style/RadioIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/income"
                app:layout_constraintEnd_toStartOf="@+id/radio_expanse"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_title"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/currency_title"
            style="@style/TextStyleLight.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/currency_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_radio"
            />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/currency_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_title"
            />

        <TextView
            android:id="@+id/currency_title3"
            style="@style/TextStyleLight.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/wallet_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_spinner"
            />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/wallet_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_title3"
            />

        <TextView
            android:id="@+id/catrgory_title"
            style="@style/TextStyleLight.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/category_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_spinner"
            />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/catrgory_title"
            />

        <TextView
            android:id="@+id/cancel"
            style="@style/TextStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/accept"
            app:layout_constraintEnd_toStartOf="@+id/accept"
            app:layout_constraintTop_toTopOf="@+id/accept"
            />

        <TextView
            android:id="@+id/accept"
            style="@style/TextStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:padding="16dp"
            android:text="@string/done"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_spinner"
            app:layout_constraintVertical_bias="0.0"
            />

    </android.support.constraint.ConstraintLayout>
</ScrollView>